Fix overlapping issue.

--- a/packages/explorable-explanations/public/styles.css
+++ b/packages/explorable-explanations/public/styles.css
@@ -114,6 +114,7 @@ text {
 .bubble-container {
     position: absolute;
     pointer-events: auto;
+    z-index: 4;
 }
 
 .bubble-container.expanded {
