--- a/packages/extension/src/view/devtools/app.css
+++ b/packages/extension/src/view/devtools/app.css
@@ -258,4 +258,5 @@ text {
 #bubble-container-div {
   top: 0px;
   left: 0px;
+  z-index: 4;
 }
